poster: avoid stretching the image (close #343)

--- a/src/plugins/poster/public/poster.scss
+++ b/src/plugins/poster/public/poster.scss
@@ -19,6 +19,9 @@
   .poster-background[data-poster] {
     width: 100%;
     height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
   }
 
   .play-wrapper[data-poster] {
